# autotests-api

./: .env  api_client_create_course.py  api_client_create_exercise.py  config.py  conftest.py  grpc_course_client.py  grpc_course_server.py  httpx_get_user_me.py  httpx_update_user.py  index.html  main.py  pydantic_create_user.py  pydantic_json_schema_get_user.py  pyproject.toml  pytest.ini  requirements.txt  tcp_users_client.py  tcp_users_server.py  test_reruns.py  websocket_users_client.py  websocket_users_server.py
1/: index.html
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
2/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
3/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
38/: index.html
39/: index.html
4/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
44/: index.html
45/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
allure-results/: 000cc1fa-6d0d-488a-a02a-144d6f4d1186-container.json  00187291-bf91-46da-aea2-0e017839d607-container.json  0030d1c7-6f62-45b0-bc83-582a219acf01-container.json  00661b0a-dd3a-43a0-8dc6-056a314a4505-container.json  (+523 more)
clients/: api_client.py  errors_schema.py  (+3 more)
(+6494 files in other folders)
