[project]
name = "autotests-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ATurekhanov",email = "turekhanovabzal3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest (==2.14.2)",
    "email-validator (==2.2.0)",
    "faker (==37.3.0)",
    "httpx (==0.28.1)",
    "jsonschema (==4.23.0)",
    "pydantic (==2.11.5)",
    "pydantic-settings (==2.9.1)",
    "pytest (==8.3.5)",
    "pytest-rerunfailures (==15.1)",
    "pytest-xdist (==3.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
